Fixed error with adding airport names, increase heap size.